--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="pricing">
       <div class="card"><b>Printing:</b> per page – 10 KES</div>
       <div class="card"><b>Photocopy:</b> per page – 5 KES</div>
-      <div class="card"><b>Scanning:</b> per page – 20 KES</div>
+      <div class="card"><b>Scanning:</b> per document – 20 KES</div>
     </div>
   </section>
 
@@ -96,14 +96,15 @@
     <h2>Contact Us</h2>
     <p style="text-align:center;">
       📍 Location: Said Tulo Plaza Kipsangui,<br>
-	           Juakali near Police station<br>
+	           Juakali near Juakali Police Station<br>
       📞 Phone: +254742995085, +254746593114<br>
       ⏰ Open: Mon–Fri, 8:00 AM – 8:00 PM
     </p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Marvel Cyber | Designed with ❤️</p>
+    <p>&copy; 2025 Marvel Cyber </p>
   </footer>
 </body>
 </html>
+
